--- a/style.css
+++ b/style.css
@@ -1,22 +1,57 @@
 .imagenPequena {
     width: 6rem;
 }
+
 .contenedores {
-display: flex;
-gap: 0.5rem;
-margin: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    margin: 1rem;
 
 }
-.contenedor{
+
+.contenedor {
     padding: 1rem;
-    
+
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 100%;
-    border: 1px solid  #0d6efd;
+    border: 1px solid #0d6efd;
 
 }
 
 .negro {
-    color:black;
+    color: black;
+}
+
+.btnSimular {
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
+
+;
+
+.piePagina {
+    padding: 2rem;
+    margin-top: 4rem;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 600px) {
+    .contenedores {
+        flex-direction: column;
+
+    }
+
+    .contenedor {
+        padding: 1rem;
+
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: 100%;
+        border: 1px solid #0d6efd;
+
+    }
+
+
 }
