--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@
     margin-left: 1rem;
 };
 
-.piePagina {
+/* .piePagina {
     display: flex;
     font-size: 24px;
     gap: 0.5rem;
     margin: 1rem;
-}
+} */
 
 .miInput {
     color: #000;
